Malawi vs Senegsl 3rd Match in group B

--- a/groupMatch/Burkina_Ethiopia_3.ipynb
+++ b/groupMatch/Burkina_Ethiopia_3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9a95d71d",
+   "id": "c0fcb93a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d99f0ac7",
+   "id": "f8aa392b",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "db90b1fd",
+   "id": "28e1234d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "926371bb",
+   "id": "b6cf4bf9",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e649a1d8",
+   "id": "396285a4",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "69f60b4a",
+   "id": "af5389be",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f38e84d9",
+   "id": "f2dd86e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ea8e0808",
+   "id": "e6f83c43",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fcd1260d",
+   "id": "1653a161",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6f0a1fe4",
+   "id": "1d4c3019",
    "metadata": {},
    "outputs": [
     {
@@ -1199,17 +1199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a30a8dd4",
+   "execution_count": 21,
+   "id": "86b98446",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sanka\\AppData\\Local\\Temp/ipykernel_3676/1079423023.py:20: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\sanka\\AppData\\Local\\Temp/ipykernel_3676/494384300.py:20: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(labels, fontsize=15, color='b')\n",
-      "C:\\Users\\sanka\\AppData\\Local\\Temp/ipykernel_3676/1079423023.py:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\sanka\\AppData\\Local\\Temp/ipykernel_3676/494384300.py:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(y, rotation=0, fontsize=25, color='b')\n"
      ]
     },
@@ -1223,6 +1223,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1252,13 +1261,14 @@
     "ax.set_xticks(x)\n",
     "plt.legend(fontsize=15)\n",
     "plt.grid(True)\n",
+    "plt.show()\n",
     "plt.savefig(\"burkina_ethiopia.png\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9bf99b5",
+   "id": "0af293dd",
    "metadata": {},
    "outputs": [],
    "source": []
